--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "mixin": "^0.2.0",
+    "nanoid": "^3.1.30",
     "vue": "^2.6.11"
   },
   "devDependencies": {
