--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "mixin": "^0.2.0",
     "nanoid": "^3.1.30",
+    "pubsub-js": "^1.9.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
