--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "mixin": "^0.2.0",
     "nanoid": "^3.1.30",
