--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mixin": "^0.2.0",
     "nanoid": "^3.1.30",
     "pubsub-js": "^1.9.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
